tests/baselines/reference/parserStrictMode15-negative.errors.txt
parserStrictMode15-negative.ts(2,8): error TS2304: Cannot find name 'a'.
parserStrictMode15-negative.ts(2,10): error TS2304: Cannot find name 'b'.


==== parserStrictMode15-negative.ts (2 errors) ====
    "use strict";
    delete a[b];
           ~
!!! error TS2304: Cannot find name 'a'.
             ~
!!! error TS2304: Cannot find name 'b'.